14. Архивировать проект [#861 #452213]